# pagemate

./: .gitignore  README.md  SETUP.md  package.json
.moon/: tasks.yml  toolchain.yml  workspace.yml
apps/be/: CLAUDE.md  main.py  moon.yml  pyproject.toml
apps/be/pagemate/: __init__.py  settings.py
apps/be/pagemate/assemble/: exception.py  middleware.py
apps/be/pagemate/clients/: __init__.py
apps/be/pagemate/clients/mongo/: __init__.py  chunk.py  document.py  tenant.py
apps/be/pagemate/clients/opanai/: __init__.py
apps/be/pagemate/clients/storage/: __init__.py
apps/be/pagemate/routers/: __init__.py  document.py  index.py  retrieval.py  retrival.py  tenant.py  upstage.py
apps/be/pagemate/schema/: __init__.py  document.py  tenant.py
apps/be/pagemate/services/: document_service.py  embedding_service.py  storage_service.py  tenant_service.py  upstage_service.py
apps/be/pagemate/tools/: __init__.py  vector.py
apps/fe/: moon.yml  next.config.js  package.json  tsconfig.json
apps/fe/public/: site.webmanifest
apps/tenant-insurance/: CHALLENGE.md  PAGE_DOCUMENTATION.md  RECIPE.md  middleware.ts  moon.yml  next.config.ts  package.json  tsconfig.json
apps/tenant-insurance/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
apps/tenant-insurance/components/: cookie-consent.tsx  disclaimer-bar.tsx  gtm.tsx  language-switcher.tsx  location-selector.tsx  mode-toggle.tsx  quote-form.tsx  (+10 more)
apps/worker/: .env.example  docker-compose.mongodb.yml  init.py  main.py  moon.yml  pyproject.toml  search.py  upload.py
frontend/: package.json
(+87 files in other folders)
