[project]
name = "be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "scalar-fastapi>=1.3.0",
    "starlette-context>=0.4.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.29.2",
    "ruff>=0.12.10",
]
